--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Week 1 task </title>
 
 
 </head>
 <body>
+    <h2><em>Hey, I'm Abigail.</em></h3>
+        <p>a programmer</p>
+        <img src="PROGRAMMERS PIC.jpeg" alt="programmers pic" width="80px" height="80px">
+        <h3>About Me.</h3> 
 
-    
+
 </body>
 
 
