--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         <p>a programmer</p>
         <img src="PROGRAMMERS PIC.jpeg" alt="programmers pic" width="80px" height="80px">
         <h3>About Me.</h3> 
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus facere nam dignissimos eius nulla voluptates! Dolor ab sapiente repellendus cupiditate quisquam! Ratione perspiciatis nesciunt sint voluptas tempora quibusdam suscipit doloremque.
+        <hr>
+        <h3>My Skills.</h3>
+        <img src="LAPTOP.jpg" alt="Laptop" width="100px" height="100px">
+        <p><b>Programming</b></p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi enim nihil unde obcaecati corrupti, eius quae a, quisquam non doloribus corporis sed voluptate vel! Sint eum deleniti sit accusamus.
+        <br>
+        <img src="PROGRAMMING.jpg" alt="Programming set" width="100px" height="100px" id="ps">
+        <p><b>Front-end Development</b></p>
 
 
 </body>
