--- a/index.html
+++ b/index.html
@@ -19,6 +19,32 @@
         <br>
         <img src="PROGRAMMING.jpg" alt="Programming set" width="100px" height="100px" id="ps">
         <p><b>Front-end Development</b></p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vero nesciunt quibusdam dolores eligendi nostrum suscipit sapiente voluptatem. Quam, quis voluptatibus? Eius asperiores minima necessitatibus praesentium sed in, suscipit culpa porro sapiente nisi quam consectetur molestiae eligendi explicabo esse commodi libero corrupti unde blanditiis hic fugit inventore totam tempore nulla? Quaerat expedita iure fuga tempora natus iusto commodi consequatur a ipsam voluptas blanditiis esse soluta nisi, iste hic atque, exercitationem quod sunt numquam, ratione pariatur.
+        <hr>
+        <h3>Services</h3>
+        <p>Here is a list of what services i can offer you</p>
+        <ul>
+            <li>Web Development</li>
+            <li>Programming</li>
+            <li>Product design</li>
+        </ul>
+        <hr>
+        <h3>Would you love to do some business with me?</h3>
+        <h4>Get in touch.</h4>
+        <fieldset>
+        <legend>User personal information</legend>
+            <form>
+                <p>Enter your full name</p>
+                <input type="text">
+                <p>Enter your email</p>
+                <input type="text">
+                
+                
+
+
+            </form>
+
+
 
 
 </body>
