--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <input type="text">
                 <p>Enter your email</p>
                 <input type="text">
+                <p>Enter your gender</p>
+                <label for="name">Male</label>
+                <input type="radio" name="Male">
+                <label for="name">Female</label>
+                <input type="radio" name="Male">
+
                 
                 
 
