tried the sample on text.html

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <br>
                 Hobby
                 <br>
-                <input type="checkbox" name="Cricket"/>Cricket
+                <input type="checkbox" checked name="Cricket"/>Cricket
                 <br>
-                <input type="checkbox" name="Football">Football
+                <input type="checkbox" checked name="Football">Football
                 <br>
-                <input type="checkbox" name="Hockey">Hockey
+                <input type="checkbox" checked name="Hockey">Hockey
                 <br>
                 Type your comment
                 <br>
