--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h2><em>Hey, I'm Abigail.</em></h3>
         <p>a programmer</p>
-        <img src="PROGRAMMERS PIC.jpeg" alt="programmers pic" width="80px" height="80px">
+        <img src="PROGRAMMERS-PIC.jpg" alt="programmers pic" width="80px" height="80px">
         <h3>About Me.</h3> 
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus facere nam dignissimos eius nulla voluptates! Dolor ab sapiente repellendus cupiditate quisquam! Ratione perspiciatis nesciunt sint voluptas tempora quibusdam suscipit doloremque.
         <hr>
